syntax = "proto3";

import "google/protobuf/struct.proto";

package Optimizely;

service DecisionService {
  rpc Activate(DecisionRequest) returns (DecisionResponse);
  rpc GetVariation(DecisionRequest) returns (DecisionResponse);
  rpc GetFeature(FeatureRequest) returns (FeatureResponse);
  rpc GetFeatureVariableString(FeatureVariableStringRequest) returns (FeatureVariableStringResponse);
}

message DecisionResponse {
  string variation_key = 1;
}

message DecisionRequest {
  RequestContext context = 1;
  message Parameters {   
    string experiment_key = 1;
    string user_id = 2;
    google.protobuf.Struct user_attributes = 3;   
  }
  Parameters parameters = 2;
}

message FeatureRequest {
  RequestContext context = 1;
  message Parameters {
    string feature_key = 1;
    string user_id = 2;
    google.protobuf.Struct user_attributes = 3;
    map<string, string> variable_keys = 4;
  }
  Parameters parameters = 2;
}

message FeatureResponse {
  bool is_enabled = 1;
  google.protobuf.Struct config = 2;
}

message FeatureVariableStringRequest {
  RequestContext context = 1;
  message Parameters {
    string feature_key = 1;
    string variable_key = 2;
    string user_id = 3;
    google.protobuf.Struct user_attributes = 4;
  }
  Parameters parameters = 2;
}

message FeatureVariableStringResponse {
  string value = 1;
}

message RequestContext {
  string datafile_key = 1;
}
